--- a/webapp/templates/app.html
+++ b/webapp/templates/app.html
@@ -15,6 +15,7 @@
 
     $( "#create_user_id" ).click(function( event ) {
             event.preventDefault();
+             $('#resultarea').empty()
             var url = $(this).attr("href");
             $("#workarea").load($(this).attr("href"));
 
@@ -22,20 +23,23 @@
 
     $( "#search_user_id" ).click(function( event ) {
       event.preventDefault();
+       $('#resultarea').empty()
       var url = $(this).attr("href");
       $("#workarea").load($(this).attr("href"));
 
       });
 
-	    $( "#id_create_item" ).click(function( event ) {
+    $( "#id_create_item" ).click(function( event ) {
       event.preventDefault();
+       $('#resultarea').empty()
       var url = $(this).attr("href");
       $("#workarea").load($(this).attr("href"));
 
       });
-	  
-	   $( "#id_search_items" ).click(function( event ) {
+
+    $( "#id_search_items" ).click(function( event ) {
       event.preventDefault();
+      $('#resultarea').empty()
       var url = $(this).attr("href");
       $("#workarea").load($(this).attr("href"));
 
@@ -74,14 +78,15 @@
                             <table    class="table">
                                 <tr>
                                     <td>
-					<a  href="/item/add/"    id="id_create_item"    >Create Item</a>
+                                        <a  href="/item/add/"    id="id_create_item"    >Create Item</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-					<a  href="/item/search/"  id="id_search_items"    >Search Items</a>
+                                        <a  href="/item/search/"  id="id_search_items"    >Search Items</a>
                                     </td>
                                 </tr>
+
                                 <tr>
                                     <td>
                                         <span    class="glyphicon    glyphicon-file    text-info"></span><a    href="http://www.jquery2dotnet.com">Newsletters</a>
