--- a/webapp/templates/item/item_search_list.html
+++ b/webapp/templates/item/item_search_list.html
@@ -1,49 +1,57 @@
-{% block content %}
+{%    load    crispy_forms_tags    %}
+{%    block    content    %}
+<!--    <form    action=""    method="POST">{%    csrf_token    %}
+    {{form    |    crispy    }}
+    <input    type="submit"    value="Create"    />
+</form>    -->
 
-<h1>Item Master List</h1>
-<ul>
-  {% if error %}
-        <p>Please enter any of the search criteria and then search.</p>
-  {% endif %}
-  <form action="/item/search/" method="post">
-    {% csrf_token %}
-    <label for="itemname">Item Name</label> 
-    <input type="text" name="item_name">
-	<label for="itembarcode">Item Barcode</label> 
-    <input type="text" name="item_barcode">
-   <label for="itemdesc">Item Description</label> 
-    <input type="text" name="item_description">
-    <input type="submit" value="Search">
-  </form>
-  <br>
-  <br>
-  
-  <table style="width:1000px">
-  <tr>
-    <th>Item Name</th>
-    <th>Description</th>
-    <th>Style</th>
-	<th>Size</th>
-	<th>Country Of Origin</th>
-	<th>Display SKU</th>
-	<th>Item Category</th>
-	<th>Create Date Time</th>
-  </tr>
-  {% for item in item_list %}
-  <tr>
-    <td><a href="{% url "item-edit" pk=item.sku_id %}">{{ item }}</a></td>
-    <td>{{ item.item_description }}</td>
-    <td>{{ item.style }}</td>
-	<td>{{ item.size }}</td>
-	<td>{{ item.country_of_origin }}</td>
-	<td>{{ item.dsp_sku }}</td>
-	<td>{{ item.item_category }}</td>
-	<td>{{ item.create_dateTime }}</td>
-  </tr>
-  {% endfor %}
-  </table>
-</ul>
 
-<a href="{% url "item-new" %}">Add Item</a>
+<form  id="id_item_search_form" name="id_item_search_form" action="/item/search/"    method="POST">{%    csrf_token    %}
+    {%    crispy    form    %}
+</form>
+
+<script type="text/javascript">
+
+$("#id_item_search_form").submit(function(event){
+    /* stop form from submitting normally  */
+    event.preventDefault();
+
+    /* get some values from elements on the page: */
+    var $form = $( this ),
+    url = $form.attr( 'action' );
+
+    var posting = $.post( url, { item_name: $('#id_item_name').val(),
+                                 item_barcode: $('#id_item_barcode').val(),
+                                 item_description: $('#id_item_description').val(),
+                                 'csrfmiddlewaretoken': '{{ csrf_token }}' } );
+
+    var tth='<table class="table table-condensed table-hover"> <thead> <tr> <th>SKU ID </th> <th>Item Name</th> <th>Item Barcode</th> <th>Dsp Sku</th> <th>item category</th>  </tr> </thead>'
+    var tbd= '<tbody id="tbody">'
+    var tcl='</tbody> </table>'
+    posting.done(function( data ) {
+        $.each(data, function(index, element) {
+                var eachrow = "<tr>"
+                 + "<td>" + element.fields.sku_id + "</td>"
+                 + "<td>" + element.fields.item_name + "</td>"
+                 + "<td>" + element.fields.item_barcode + "</td>"
+                 + "<td>" + element.fields.dsp_sku + "</td>"
+                 + "<td>" + element.fields.item_category + "</td>"
+                 + "</tr>";
+                tbd = tbd + eachrow;
+        });
+
+        var tableData= tth+tbd+tcl;
+        $('#resultarea').html(tableData);
+    });
+
+     /* Error Handling */
+     posting.fail(function( jqXHR, textStatus ) {
+            alert( "Request failed: " + textStatus );
+     });
+
+});
+</script>
+
+
 {% endblock %}
 
