--- a/webapp/templates/location/location_search_list_form.html
+++ b/webapp/templates/location/location_search_list_form.html
@@ -6,7 +6,7 @@
 </form>    -->
 
 
-<form  id="id_location_search_form" name="id_location_search_form" action="/location/search/"    method="POST">{%    csrf_token    %}
+<form  class="form-horizontal" id="id_location_search_form" name="id_location_search_form" action="/location/search/"    method="POST">{%    csrf_token    %}
     {%    crispy    form    %}
 </form>
 
