Committing the error/exception handling code - JJ

--- a/webapp/templates/usermaster/users_list_form.html
+++ b/webapp/templates/usermaster/users_list_form.html
@@ -1,9 +1,2 @@
-{% if users_list %}
-    <ul>
-    {% for user in users_list %}
-        <li>{{ user.email }}</li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No Users are available.</p>
-{% endif %}
+<!DOCTYPE html>
+<h1> HELLO TESTING </h1>
