--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -42,7 +42,13 @@
          <div    class="row  content-wrapper">
 
             <div    class="col-md-12"   >
-            <div    class="clear"></div>
+            <div    class="clear">
+            {% if messages %}
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            {% endif %}
+            </div>
 
             <div    class="form-horizontal-wrapper" >
 
@@ -52,7 +58,7 @@
                 <div    class="form-group">
                     <label  for="emailID"   class="control-label    col-xs-4">User  ID</label>
                     <div    class="col-xs-5">
-                        <input  type="email" class="form-control"    id="id_email"    name="email"  placeholder="User   ID">
+                        <input  type="email" class="form-control"    id="id_email"    name="email"  placeholder="User   ID" autofocus>
                     </div>
                 </div>
                 <div    class="form-group">
@@ -86,7 +92,6 @@
         <div    class="row  footer-wrapper">
               <footer>That's  the sticky  footer</footer>
         </div>
-
 
     </div>
 
