--- a/webapp/templates/usermaster/user_create_form.html
+++ b/webapp/templates/usermaster/user_create_form.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {%    load    crispy_forms_tags    %}
 {%    block    content    %}
 <!--    <form    action=""    method="POST">{%    csrf_token    %}
@@ -6,7 +7,8 @@
 </form>    -->
 
 
-<form   class="form-horizontal" id="id_user_creation_form" name="id_user_creation_form" action="/usermaster/createuser/"    method="POST">{%    csrf_token    %}
+<form   class="form-horizontal" id="id_user_creation_form" name="id_user_creation_form" action="/usermaster/createuser/"  method="POST">
+    {%    csrf_token    %}
     {%    crispy    form    %}
 </form>
 
@@ -25,24 +27,29 @@ $("#id_user_creation_form").submit(function(event) {
     var posting = $.post( url, { email: $('#id_email').val(), password: $('#id_password').val(),
          title: $('#id_title').val(),first_name: $('#id_first_name').val(), last_name: $('#id_last_name').val(),
          job_title: $('#id_job_title').val(),date_joined: $('#id_date_joined').val(),date_expiry: $('#id_date_expiry').val(),
-         is_active: $('#id_is_active').val(),enterprise_id: $('#id_enterprise_id').val(),store_id: $('#id_store_id').val(),
+         is_active: $('#id_is_active').val(),store_id: $('#id_store_id').val(),
           'csrfmiddlewaretoken': '{{ csrf_token }}'} );
 
-    /* Put the results in a div */
+    var tth='<table class="table table-condensed table-hover"> <thead> <tr> <th>Email </th> <th>First Name</th> <th>Last Name</th> <th>Active</th> <th>Store ID</th> <th>Enterprise ID</th> </tr> </thead>'
+    var tbd= '<tbody id="tbody">'
+    var tcl='</tbody> </table>'
     posting.done(function( data ) {
-           $.each(data, function(index, element) {
+        $('#resultarea').empty()
+        
+        $.each(data, function(index, element) {
+                var eachrow = "<tr>"
+                 + "<td>" + element.fields.email + "</td>"
+                 + "<td>" + element.fields.first_name + "</td>"
+                 + "<td>" + element.fields.last_name + "</td>"
+                 + "<td>" + element.fields.is_active + "</td>"
+                 + "<td>" + element.fields.store_id + "</td>"
+                 + "<td>" + element.fields.enterprise_id + "</td>"
+                 + "</tr>";
+                tbd = tbd + eachrow;
+        });
 
-                url="/usermaster/user/"+element+"/";
-                $("#workarea").load(url);
-                /*$.getJSON(url,function(result){
-                    alert( "Success: " + url );
-                    $.each(result, function(i, field){
-                        $("#resultarea").append(i + "" + field + " ");
-                    });
-                }); */
-
-           });
-
+        var tableData= tth+tbd+tcl;
+        $('#resultarea').html(tableData);
     });
 
      /* Error Handling */
