--- a/webapp/templates/usermaster/user_detail_form.html
+++ b/webapp/templates/usermaster/user_detail_form.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {% load crispy_forms_tags    %}
     <link    href="./../../../../static/css/bootstrap.min.css"    rel="stylesheet"    media="screen">
     <link    href="./../../../../static/css/menu.css"    rel="stylesheet"    type="text/css">
