--- a/webapp/templates/usermaster/user_login_form.html
+++ b/webapp/templates/usermaster/user_login_form.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {%    load    crispy_forms_tags    %}
 {%    block    content    %}
 <script>
@@ -6,7 +7,6 @@
 <form   action="/usermaster/userlogin/"   method="POST">{%    csrf_token  %}
     {%  crispy  form    %}
 </form>
-
 
 {%    endblock    %}
 
