--- a/webapp/templates/usermaster/user_search_form.html
+++ b/webapp/templates/usermaster/user_search_form.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 {%    load    crispy_forms_tags    %}
 {%    block    content    %}
 <!--    <form    action=""    method="POST">{%    csrf_token    %}
